--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -273,6 +273,10 @@
       url: /serverless-computing
       enabled: true
     -
+      name: Financial Engineering
+      url: /financial-engineering
+      enabled: true
+    -
       name: Application Engineering
       url: /application-engineering
       enabled: true
