--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -281,6 +281,10 @@
       url: /application-engineering
       enabled: true
     -
+        name: Application Modernization
+        url: /application-modernization
+        enabled: true
+    -
       name: Blockchain Development
       url: /blockchain-development
       enabled: false
