updated global site description metadata

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: AxOps Technology Services
 subtitle: "Technology, Consultancy, and Training Services"
 address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
 email: 
-company_description: AxOps is a Technology, Consulting, and Training Services company. We expedite your journey from idea to execution 🎯
+company_description: AxOps specializes in Data Intelligence, Enterprise AI, Hybrid Cloud Computing, and FinTech Solutions. We expedite your journey from idea to execution 🎯
 
 nav_logo: &url /assets/img/axops-134x26.png
 nav_logo2x: &url /assets/img/axops-134x26@2x.png 2x
