minor update to index.md

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -4,7 +4,7 @@ tagline_main: Expedite your journey from <i>idea</i> to <b>execution</b><br />
 
 #tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
 #tagline_dynamic: at low cost, and infinite scale, on your terms 🎯
-tagline_dynamic: at optimal cost, and unlimited scale, on your terms 🎯
+tagline_dynamic: at optimal cost ⚖️, and unlimited scale ♾️, on your terms 🎯
 tagline_dynamic_delay: 85
 #tagline_dynamic_delay: 100
 #tagline_dynamic_delay: 75
@@ -13,7 +13,7 @@ tagline_dynamic_delay: 85
 #tagline_cta: Strategic Data Intelligence & Executive Technical Leadership Solutions for Your Enterprise
 #tagline_cta: Strategic Data Intelligence Solutions & Interim CTO Services for Your Enterprise
 #tagline_cta: Strategic Data Intelligence Solutions & CTO Advisory Services for Your Enterprise
-tagline_cta: Data Intelligence Solutions & Interim Fractional CTO Services for Your Enterprise
+tagline_cta: Data Intelligence, Fractional CTO, and Hybrid Cloud Solutions for Your Enterprise
 
 button_cta1_text: Solutions
 button_cta1_url: /solutions
