updated meta description

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude:
 url: https://www.axops.tech
 above-the-fold-right-link: /solutions
 title: AxOps Technology Services
-subtitle: "Technology, Consultancy, and Training Services"
+subtitle: "Data Intelligence, Enterprise AI, Hybrid Cloud Computing, and FinTech Solutions."
 address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
 email: 
 company_description: AxOps specializes in Data Intelligence, Enterprise AI, Hybrid Cloud Computing, and FinTech Solutions. We expedite your journey from idea to execution 🎯
